- new method SCIPmarkDoNotUpgradeConsLinear() in cons_linear.?, which allows to forbid upgrading of linear constraints
- added parameter "quiet" to SCIPparamSet...() which allows to turn on an output showing the new parameter value
- new methods SCIPeventGetHoleLeft() and SCIPeventGetHoleRight() for accessing the left right interval bound 
  of a domain hole added or removed event

features:
- constraint handler can now register their upgrade functions for quadratic constraints to cons_quadratic (similar to LINCONSUPGD)
- added branchcands for relaxator solution, that can be added by the relaxator and used by branching rules
- added relaxsol to variables, s.t. a relaxator can store a solution on which branching or separation can be done
- added relaxation structure to SCIP, it represents global relaxation information independent from a specific relaxator;
  at the moment, it contains information about the relaxation solution stored in the variables: objective value and validness
- SCIP can now branch on relaxation solutions that are either installed to the relaxsol field of the variables or 
  added to the list of relaxation candidates, e.g., by constraint handlers. Branching on relaxation solutions is performed 
  if the enforcement resulted in an unresolved infeasibility and there are no LP branching candidates, but before pseudo solution branching.
  The branching rules leastinf, mostinf, random, and pscost implement the callback for branching on relaxation candidates.
- primal heuristics may now already be called before presolving, using the new timing point SCIP_HEURTIMING_BEFOREPRESOL. 
  Note that solutions that are added before/during presolving, will be retransformed to the original space.
- SCIP can branch on continuous variables. The branching value x' must not be one of the bounds. Two children (x <= x', x >= x') will be created.
- SCIP may now be manually restarted