@@ -71,6 +71,8 @@ interface:
 - added parameter "quiet" to SCIPparamSet...() which allows to turn on an output showing the new parameter value
 - new methods SCIPeventGetHoleLeft() and SCIPeventGetHoleRight() for accessing the left right interval bound 
   of a domain hole added or removed event
+- new method SCIPprintSolReaderFzn() which prints the best solution in Flatzinc format w.r.t. to the output annotations 
+  in the input file of the flatzinc model
 
 features:
 - constraint handler can now register their upgrade functions for quadratic constraints to cons_quadratic (similar to LINCONSUPGD)
@@ -155,6 +157,8 @@ features:
 - added new dialog for setting the SCIP parameters for feasibility problems "SCIP> set emphasis feasibility"
 - new method SCIPwriteVarsLinearsum() which writes an array of variables and coefficients as linear sum in cip-Format to given stream
 - implemented the data structure and events for global and local domain holes added and removed 
+- the Flatzinc reader can now handle the output annotations of the Flatzinc format; the method SCIPprintSolReaderFzn() 
+  outputs the given solution in Flatzinc format w.r.t. the output annotations
 
 performance improvements:
 - improved settings/emphasis/cpsolver.set to decrease time per node
